--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,13 +1,24 @@
+@font-face {
+  font-family: 'Inter';
+  font-weight: 100 900;
+  font-display: block;
+  font-style: normal;
+  font-named-instance: 'Regular';
+  src: url('/fonts/Inter-roman.var.woff2') format('woff2');
+}
+@font-face {
+  font-family: 'Inter';
+  font-weight: 100 900;
+  font-display: block;
+  font-style: italic;
+  font-named-instance: 'Italic';
+  src: url('/fonts/Inter-italic.var.woff2') format('woff2');
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-/* Styles for image carousel used on the project detail page */
-div.slick-active div {
-  @apply !opacity-100 py-0;
-  transition: padding 0.4s ease-in-out;
-}
-
-li.slick-active div {
-  @apply bg-white;
+#__next {
+  min-height: 100%;
 }
